Bug 765839 - 'Enable IndexedDB OOP test suite'. r=khuey.