dom/indexedDB/IDBTransaction.cpp
@@ -250,6 +250,7 @@ IDBTransaction::CommitOrRollback()
     NS_ASSERTION(mActorChild, "Must have an actor!");
 
     mActorChild->SendAllRequestsFinished();
+
     return NS_OK;
   }
 
